--- a/BootMVCProj09-MiniProject-CRUD_Operations/src/main/resources/application.properties
+++ b/BootMVCProj09-MiniProject-CRUD_Operations/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=BootMVCProj09-MiniProject-CRUD_Operations
 
 #data source properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///rk
+spring.datasource.url=jdbc:mysql://mysqldb:3306/rk
 spring.datasource.username=root
 spring.datasource.password=9866828191r@K
 
