--- a/BootMVCProj05-Data-RanderingWithEmplyeeData/pom.xml
+++ b/BootMVCProj05-Data-RanderingWithEmplyeeData/pom.xml
@@ -73,6 +73,7 @@
 	</dependencies>
 
 	<build>
+       	<finalName>sb-MySQL-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
